2003/11/17 10:33 (-0500) muppetman

	* xs/GdkDrawable.xs: wrong PREFIX resulted in wrong method name for
	gdk_drawable_get_image().  bug report from dosmodi gergely.

2003/11/17 07:10 (-0500) rwmcfa1

	* Makefile.PL: xs_files-2.3 shouldn't be involved outside of the 2.3 
	branch. problem found by Bjarne Steinsbø

2003/11/16 21:36 (-0500) rwmcfa1

	* ChangeLog, xs/GdkDisplay.xs, xs/GdkPixbuf.xs, xs/GtkImage.xs,
	xs/GtkRadioButton.xs, xs/GtkTextIter.xs, xs/GtkTooltips.xs,
	xs/GtkTreeView.xs, xs/GtkWidget.xs, xs/GtkWindow.xs, xs/PangoFont.xs:
	apidoc updates

2003/11/16 20:32 (-0500) muppetman

	* xs/GtkMenu.xs: use the new GPerlCallback helper macros in
	gperl_marshal.h

2003/11/16 02:44 (-0500) muppetman

	* xs/GtkCellRenderer.xs, xs/GtkEditable.xs, xs/GtkMenu.xs:
	clean up the stack properly after call_sv to stop internal bleeding.

2003/11/13 23:41 (-0500) muppetman

	* Gtk2.pm, Makefile.PL, README: bump version to 1.011

2003/11/14 04:06 pcg

	* xs/GdkTypes.xs: fix constrain_size name.

2003/11/13 21:26 (-0500) muppetman

	* xs/GdkWindow.xs, xs/GtkWidget.xs: genfirstpass appears to have
	skipped shape_combine_mask all those months ago.  implemented it in
	both GdkWindow and GtkWidget because i like cool shaped windows.

2003/11/13 13:25 (-0500) muppetman

	* gdk.typemap: hush compiler warning 'incompatible type for arg 1 of
	Perl_croak_nocontext' -- croak() is by default croak_nocontext, which
	does not get aTHX_ passed to it.

	* xs/GdkTypes.xs: typo in constrain_size -- no such function as
	mewSViv, although the name is nice.  :)
	add pod for the rectangle mutators, so their signatures make sense
	in the docs.

2003/11/12 18:28 pcg

	* gdk.typemap, xs/GdkTypes.xs: implement Gtk2::Gdk::Geometry.
        * xs/GdkWindow.xs, xs/GtkWindow.xs: use it and move
        gdk_window_constraing_size to GdkTypes.xs.

2003/11/12 16:05 pcg

	* xs/GdkTypes.xs: change acessor methods to mutators for
        Gtk2::Gdk:Rectangle.

2003/11/11 23:00 (-0500) muppetman
